--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -13,4 +13,5 @@
         </p>
         <p>{{ post.content|truncatewords:30|linebreaks }}</p>
     {% endfor %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
