--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -14,5 +14,5 @@
         <p>{{ post.content|truncatewords:30|linebreaks }}</p>
     {% endfor %}
     # pagination include
-    {% include "pagination.html" with page=posts %}
+    {% include "pagination.html" with page=page_obj %}
 {% endblock %}
