--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
         <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+        <link rel="canonical" href="{{ request.build_absolute_uri }}">
     </head>
     <body>
         <div id="content">
