--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -9,6 +9,21 @@
     </p>
     <p>{{ post.content|linebreaks }}</p>
     <p>
-        <a href="{% url "blog:post_share" post.id %}">Blogbeitrag teilen</a>
+        <a href="{% url 'blog:post_share' post.id %}">Blogbeitrag teilen</a>
     </p>
+    {% with comments.count as total_comments %}
+    <h2>{{ total_comments }} Kommentar{% if total_comments != 1 %}e{% endif %}</h2>
+    {% endwith %}
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                Kommentar {{ forloop.counter }} von {{ comment.name }}
+                {{ comment.created_at|date:"d.m.Y H:i"}}
+            </p>
+            <p>{{ comment.content|linebreaks }}</p>
+        </div>
+    {% empty %}
+        <p>Es wurden noch keine Kommentare hinzugefügt.</p>        
+    {% endfor %}
+    {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
