corrected wrong form url in comment form

--- a/mysite/blog/templates/blog/post/includes/comment_form.html
+++ b/mysite/blog/templates/blog/post/includes/comment_form.html
@@ -1,5 +1,5 @@
 <h2>Neuen Kommentar hinzufügen</h2>
-<form action="{% url 'blog:post_share' post.id %}" method="POST">
+<form action="{% url 'blog:post_comment' post.id %}" method="POST">
     {{ form.as_p }}
     {% csrf_token %}
     <p>
