--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -101,3 +101,29 @@ input[type=submit] {
     font-size: 12px;
     color: #666;
 }
+
+/* Styling für Django Messages */
+.messages {
+    list-style: none;
+    padding: 15px;
+    margin: 0 0 20px 0;
+    border-radius: 5px;
+}
+
+.messages li {
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+}
+
+.messages .success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.messages .error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
