--- a/mysite/blog/templates/blog/post/includes/comment_form.html
+++ b/mysite/blog/templates/blog/post/includes/comment_form.html
@@ -1,6 +1,12 @@
 <h2>Neuen Kommentar hinzufügen</h2>
 <form action="{% url 'blog:post_comment' post.id %}" method="POST">
-    {{ form.as_p }}
+    <div class="left">
+        {{ form.name.as_field_group }}
+    </div>
+    <div class="left">
+        {{ form.email.as_field_group }}
+    </div>
+    {{ form.body.as_field_group }}
     {% csrf_token %}
     <p>
         <input type="submit" value="Senden">
