--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -8,6 +8,7 @@
         <h2>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         </h2>
+        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>
         <p class="date">
             Veröffentlicht am {{ post.published_at }} von {{ post.author }}
         </p>
