--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -13,7 +13,12 @@
         <h2>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         </h2>
-        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>
+        <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+        <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %},{% endif %}
+            {% endfor %}
+        </p>
         <p class="date">
             Veröffentlicht am {{ post.published_at }} von {{ post.author }}
         </p>
