added first custom template tag and used it in base tpl

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="de">
@@ -23,7 +24,10 @@
         </div>
         <div id="sidebar">
             <h2>Mein Blog</h2>
-            <p>Das ist mein Blog</p>
+            <p>
+                Das ist mein Blog
+                Ich habe bislang {% total_posts %} Beiträge geschrieben.
+            </p>
         </div>
     </body>
 </html>
